--- a/parks.html
+++ b/parks.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <a href="#main">Skip to main content</a>
   <header>
     <nav>
       <ul>
@@ -22,8 +23,8 @@
     <h1>Michigan Parks</h1>
 
   </header>
-  <main>
-    <div>
+  <main id="main">
+    <div class="flex-container">
       <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
       <img src="images/bacon_near_the_fort.png"
